--- a/irohad/torii/processor/CMakeLists.txt
+++ b/irohad/torii/processor/CMakeLists.txt
@@ -10,4 +10,5 @@ target_link_libraries(processors PUBLIC
     mst_processor
     shared_model_proto_builders
     query_execution
+    status_bus
     )
