--- a/test/module/irohad/ordering/CMakeLists.txt
+++ b/test/module/irohad/ordering/CMakeLists.txt
@@ -16,6 +16,7 @@ addtest(ordering_service_test ordering_service_test.cpp)
 target_link_libraries(ordering_service_test
     ordering_service
     shared_model_stateless_validation
+    shared_model_proto_backend
     )
 
 addtest(ordering_gate_test ordering_gate_test.cpp)
