Add proposal factory to ordering_gate_transport_grpc
It is used in ordering_service_tests

Signed-off-by: Nikita Alekseev <n.alekseev2104@gmail.com>

# Conflicts:
#	shared_model/backend/protobuf/common_objects/proto_common_objects_factory.hpp
#	shared_model/interfaces/common_objects/common_objects_factory.hpp
#	test/module/shared_model/backend_proto/common_objects/proto_common_objects_factory_test.cpp

--- a/irohad/ordering/CMakeLists.txt
+++ b/irohad/ordering/CMakeLists.txt
@@ -24,6 +24,7 @@ target_link_libraries(ordering_service
     rxcpp
     tbb
     shared_model_interfaces
+    shared_model_proto_backend
     ordering_grpc
     logger
     )
